<resources>
    <string name="app_name">秒吧</string>

    <string name="progress_tips">请稍候...</string>
    <string name="network_timeout_tips">o(╯□╰)o您的网络状况不佳，请稍后再试...</string>
    <string name="network_data_error_tips">(⊙o⊙)…数据出现异常啦...</string>
    <string name="network_default_error_tips">网络请求失败</string>

    <string name="main_item_home_text">首页</string>
    <string name="main_item_mall_text">商城</string>
    <string name="main_item_transaction_text">交易</string>
    <string name="main_item_quotes_text">行情</string>
    <string name="main_item_person_text">我的</string>

    <string-array name="home_tabs_arrays">
        <item>价值媒体</item>
        <item>时间广场</item>
        <item>互动平台</item>
        <item>约吧</item>
    </string-array>
    <!--<string-array name="home_infoation_types">-->
    <!--<item>头条</item>-->
    <!--<item>娱乐</item>-->
    <!--<item>科技</item>-->
    <!--<item>要闻</item>-->
    <!--<item>金融</item>-->
    <!--<item>名人</item>-->
    <!--</string-array>-->
    <string-array name="home_infoation_types">
        <item>推荐</item>
        <item>娱乐</item>
        <item>科技</item>
        <item>要闻</item>
        <item>名人</item>
    </string-array>
    <string-array name="mall_tabs">
        <item>全部</item>
        <item>投资人</item>
        <item>企业家</item>
        <item>明星</item>
        <item>网红</item>
        <item>名师</item>
        <item>名医</item>
    </string-array>
    <string-array name="quote_tabs">
        <item>自选</item>
        <item>投资人</item>
        <item>企业家</item>
        <item>明星</item>
        <item>网红</item>
        <item>名师</item>
        <item>名医</item>
    </string-array>
    <string-array name="transaction_tabs">
        <item>购买</item>
        <item>转让</item>
        <item>交易</item>
        <item>明细</item>
        <item>已购</item>
    </string-array>
    <string name="home_share_title">分享给好友</string>

    <string name="mall_detail_buy_text">立即购买</string>
    <string name="mall_detail_info_time">时长：%s</string>
    <string name="mall_detail_info_place">地点：%s</string>
    <string name="mall_detail_info_start_time">开始时间：%s</string>
    <string name="mall_detail_info_price">￥%s</string>
    <string name="mall_detail_info_q_price">%sQ</string>
    <string name="mall_detail_info_position">职位：%s</string>
    <string name="mall_detail_info_school">毕业院校：%s</string>

    <string name="dialog_mall_buy_tips">确认支付</string>
    <string name="dialog_mall_buy_btn">立即支付</string>
    <string name="dialog_mall_buy_item_name">商品名称</string>
    <string name="dialog_mall_buy_item_time">商品时间</string>
    <string name="dialog_mall_buy_protocol_tips">本人已同意</string>
    <string name="dialog_mall_buy_protocol_content">《支付说明》</string>

    <string name="quote_item_title_name">名人</string>
    <string name="quote_item_title_curr_price">现价</string>
    <string name="quote_item_title_up">涨跌</string>
    <string name="quote_item_title_percent">涨跌幅</string>

    <string name="transaction_head_buy">买入</string>
    <string name="transaction_head_sale">卖出</string>
    <string name="transaction_head_seconds_value">%s秒</string>
    <string name="transaction_head_price_value">￥</string>
    <string name="transaction_head_price_up">涨停：%s</string>
    <string name="transaction_head_price_down">跌停：%s</string>
    <string name="transaction_head_price_down_tips">跌停：</string>
    <string name="transaction_head_price_up_tips">涨停：</string>
    <string name="transaction_head_new_price">最新价：%s</string>

    <string name="order_detail_person_name">申购名人：%s</string>
    <string name="order_detail_order_money">申购价格：￥%s/秒</string>
    <string name="order_detail_order_seconds">申购秒数：%s秒</string>
    <string name="order_detail_order_success_seconds">申购成功秒数：%s秒</string>
    <string name="order_detail_order_pay_price">支付金额：￥%s</string>
    <string name="order_detail_order_num">订单编号：%s</string>
    <string name="order_detail_order_time">创建时间：%s</string>

    <string name="purchase_money_text">￥%s/秒</string>

    <string name="aboutus_copyright">Copyrigh©2018-2019 \n 秒吧（湖北）科技有限公司 版权所有</string>

    <string-array name="order_manage_tabs">
        <item>全部</item>
        <item>待履约</item>
        <item>履约中</item>
        <item>已履约</item>
        <item>退款中</item>
        <item>已退款</item>
    </string-array>
    <string name="code_countdown_hint">秒后重新获取</string>
    <string name="sign_cotinuous_day">连续签到%s天！</string>
    <string name="sign_rule_des">中断签到将会从第1天开始\n连续签到7天以上，每天188Q</string>
    <string name="read_person_count">阅读量：%s</string>

    <string name="purchase_detail_time_use">%1$s时间仅限于以下几种情况（常住地：%2$s）</string>
    <string name="purchase_confirm_buy_available_tips">可预购（当前最多可申购%s秒）</string>

    <string name="recharge_pay_tips">%s%s元</string>

    <string name="withdraw_fees_tips">手续费：￥%1$s；转账费率%2$s%%</string>

    <string name="invite_friends_rule_text">1.将你的专属二维码、链接分享至社交网络;\n2.邀请好友通过你的二维码、链接下载激活秒吧APP;\n3.好友在秒吧绑定手机号后，即可立即获得Q奖励。</string>
    <string name="invite_generate_url">生成链接：%s</string>
    <string name="invite_total_get_q">累计获得：<font color="#ffb528">%s</font>Q价值积分</string>
    <string name="qcoin_rank_rule_text">每天我们将对所有人的当日获取Q价值积分进行排名，每小时更新一次，在24点时对最终榜单快照，进入榜单前100名的用户，将会自动获得对应的夺宝奖励，当日进入榜单的用户，奖励将发放到秒吧钱包。
\n\n赠送规则如下：
\n【第1名】获得888Q价值积分奖励
\n【第2-5名】每人获得388Q价值积分奖励
\n【第6-10名】每人获得288Q价值积分奖励
\n【第11-100名】每人获得88Q价值积分奖励</string>

    <string name="today_income_intro">1.阅读新闻每60秒，可获得1Q的奖励。\n2.看新闻赚Q有严格的防作弊机制，发现异常操作，系统将自动封停帐号！</string>

    <string name="date_detail_buy_tips">￥%s 购买</string>
    <string name="date_detail_q_buy_tips">%sQ 购买</string>
    <string name="date_detail_person_count">人数：%s人</string>
    <string name="date_buy_notify">
        1.行程一经购买，如无特殊情况，暂不支持退款。
        \n2.行程预约成功后，可以私聊和名人沟通具体的见面日期地点。
        \n3.名人形成有变，会电话通知您，24小时内可随时取消并退款。
        \n4.如遇其他问题可直接联系客服。
    </string>
    <string name="withdraw_record_content_text">发起提现￥%s，支付手续费￥%s</string>
    <string name="withdraw_record_reason_text">原因：%s</string>
    <string name="withdraw_record_name_text">姓名：%s</string>
    <string name="withdraw_record_bankcard_text">银行卡：%s</string>
    <string name="send_dynamic_limit">%d/500</string>
</resources>
