<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="15dip"
    android:paddingTop="12dip"
    android:paddingRight="15dip">

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dip"
        android:text="@string/withdraw_record_content_text"
        android:textColor="#414141"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dip"
        android:text="审核中"
        android:textColor="#03c086"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_content"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#a9a9a9"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_status"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dip"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/withdraw_record_name_text"
        android:textColor="#414141"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_bank_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_status"/>

    <TextView
        android:id="@+id/tv_bank_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw_record_bankcard_text"
        android:textColor="#414141"
        android:textSize="13sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_reason"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:text="@string/withdraw_record_reason_text"
        android:textColor="#414141"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"/>

    <View
        android:id="@+id/v_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="12dip"
        android:background="#ebebeb"
        app:layout_constraintTop_toBottomOf="@+id/tv_reason"/>
</android.support.constraint.ConstraintLayout>