<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/mall_tool_pl"
                android:text="申购订单详情"
                android:textColor="@android:color/white"
                android:textSize="@dimen/toolbar_title_font"/>

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="@dimen/toolbar_height"
                android:layout_height="@dimen/toolbar_height"
                android:layout_alignParentLeft="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_back"/>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/img_status"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_marginTop="24dip"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_pay_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:text="支付成功!"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_status"/>

    <TextView
        android:id="@+id/tv_order_info_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginTop="40dip"
        android:text="订单信息"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_status"/>

    <TextView
        android:id="@+id/tv_person_name"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginTop="20dip"
        android:layout_marginRight="30dip"
        android:text="@string/order_detail_person_name"
        android:textColor="#777777"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_info_tips"/>

    <TextView
        android:id="@+id/tv_mondy"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dip"
        android:text="@string/order_detail_order_money"
        android:textColor="#777777"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_person_name"
        app:layout_constraintStart_toStartOf="@+id/tv_person_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_person_name"/>

    <TextView
        android:id="@+id/tv_seconds"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dip"
        android:text="@string/order_detail_order_seconds"
        android:textColor="#777777"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_person_name"
        app:layout_constraintStart_toStartOf="@+id/tv_person_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_mondy"/>

    <TextView
        android:id="@+id/tv_pay_price"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dip"
        android:text="@string/order_detail_order_pay_price"
        android:textColor="#777777"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_person_name"
        app:layout_constraintStart_toStartOf="@+id/tv_person_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_seconds"/>

    <TextView
        android:id="@+id/tv_order_num"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dip"
        android:text="@string/order_detail_order_num"
        android:textColor="#777777"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_person_name"
        app:layout_constraintStart_toStartOf="@+id/tv_person_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_pay_price"/>

    <TextView
        android:id="@+id/tv_order_time"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dip"
        android:text="@string/order_detail_order_time"
        android:textColor="#777777"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_person_name"
        app:layout_constraintStart_toStartOf="@+id/tv_person_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_num"/>
</android.support.constraint.ConstraintLayout>